fixed splash screen cutting off G

--- a/assets/css/preload.css
+++ b/assets/css/preload.css
@@ -8,6 +8,7 @@ body {
 }
 #content{
 	width:100%;
+	height:100%;
 	text-align:center;
 }
 #Stage{
